Set max-width for img inside p to avoid overflowing

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -1,3 +1,6 @@
+p img {
+  max-width: 100%;
+}
 .container {
   margin: auto;
   max-width: 500px;
